Tue Apr 03 09:18:51 BST 2007  Olly Betts <olly@survex.com>

	* tests/harness/backendmanager.cc: Under __WIN32__, launch
	  xapian-tcpsrv as a child process communicating via a pipe and handle
	  the port being already in use by trying the next port up (as we do
	  under UNIX).

Tue Apr 03 06:50:48 BST 2007  Olly Betts <olly@survex.com>

	* net/tcpserver.cc: For __WIN32__ and __CYGWIN__, use
	  SO_EXCLUSIVEADDRUSE (if available) on on listening sockets for
	  xapian-tcpsrv.

Tue Apr 03 04:37:02 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/positioniterator.h,include/xapian/postingiterator.h:
	  Fix mangled comment start in (C) headers.

Tue Apr 03 03:27:12 BST 2007  Olly Betts <olly@survex.com>

	* include/xapian/,generate-exceptions.in: Mark the following
	  constructors 'explicit': DocIDWrapper(docid), TermPosWrapper(const
	  std::string &), Query::Internal(const std::string &), Database(const
	  std::string &), all Error subclass constructors taking const
	  std::string &.  Only the Database and Error subclass changes should
	  be able to affect user code at all.
	* include/xapian/,api/omenquire.cc: Make the following methods
	  'const': RSet::contains(MSetIterator), Enquire::get_query().  This
	  shouldn't affect the validity of any user code.

Mon Apr 02 11:44:26 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* HACKING: Add note on "Building from SVN on Windows with MSVC"

Mon Apr 02 11:32:51 BST 2007  Olly Betts <olly@survex.com>

	* api/omqueryinternal.cc: Fix assertion to allow for OP_VALUE_RANGE.

Mon Apr 02 11:14:10 BST 2007  Olly Betts <olly@survex.com>

	* autoconf/rjb_find_stlport.m4: Fix check that the user didn't say
	  `./configure --with-stlport-compiler' (without `=gcc' or similar
	  after it).

Mon Apr 02 10:38:35 BST 2007  Olly Betts <olly@survex.com>

	* tests/api_db.cc,tests/apitest.cc: Under __WIN32__ disable tests 
	  which require the prog variant of the remote backend.
